VariationHandling/JES_files/2016_preVFP/Histo_1000_TTTo2L2Nu_boostedSmeared.err
[8MB/455.1MB][  1%][>                                                 ][2.667MB/s]  [16MB/455.1MB][  3%][=>                                                ][4MB/s]  [24MB/455.1MB][  5%][==>                                               ][4.8MB/s]  [32MB/455.1MB][  7%][===>                                              ][4.571MB/s]  [48MB/455.1MB][ 10%][=====>                                            ][6MB/s]  [56MB/455.1MB][ 12%][======>                                           ][6.222MB/s]  [64MB/455.1MB][ 14%][=======>                                          ][6.4MB/s]  [72MB/455.1MB][ 15%][=======>                                          ][6.545MB/s]  [80MB/455.1MB][ 17%][========>                                         ][6.667MB/s]  [88MB/455.1MB][ 19%][=========>                                        ][6.286MB/s]  [96MB/455.1MB][ 21%][==========>                                       ][6.4MB/s]  [104MB/455.1MB][ 22%][===========>                                      ][6.5MB/s]  [112MB/455.1MB][ 24%][============>                                     ][6.588MB/s]  [120MB/455.1MB][ 26%][=============>                                    ][6.667MB/s]  [136MB/455.1MB][ 29%][==============>                                   ][7.158MB/s]  [144MB/455.1MB][ 31%][===============>                                  ][7.2MB/s]  [152MB/455.1MB][ 33%][================>                                 ][7.238MB/s]  [160MB/455.1MB][ 35%][=================>                                ][7.273MB/s]  [168MB/455.1MB][ 36%][==================>                               ][7MB/s]  [176MB/455.1MB][ 38%][===================>                              ][7.04MB/s]  [184MB/455.1MB][ 40%][====================>                             ][7.077MB/s]  [192MB/455.1MB][ 42%][=====================>                            ][7.111MB/s]  [200MB/455.1MB][ 43%][=====================>                            ][7.143MB/s]  [208MB/455.1MB][ 45%][======================>                           ][7.172MB/s]  [216MB/455.1MB][ 47%][=======================>                          ][7.2MB/s]  [224MB/455.1MB][ 49%][========================>                         ][7.226MB/s]  [232MB/455.1MB][ 50%][=========================>                        ][7.25MB/s]  [240MB/455.1MB][ 52%][==========================>                       ][7.059MB/s]  [248MB/455.1MB][ 54%][===========================>                      ][6.703MB/s]  [256MB/455.1MB][ 56%][============================>                     ][6.4MB/s]  [264MB/455.1MB][ 58%][=============================>                    ][6.14MB/s]  [272MB/455.1MB][ 59%][=============================>                    ][5.44MB/s]  [280MB/455.1MB][ 61%][==============================>                   ][4.828MB/s]  [288MB/455.1MB][ 63%][===============================>                  ][4.645MB/s]  [296MB/455.1MB][ 65%][================================>                 ][4.485MB/s]  [304MB/455.1MB][ 66%][=================================>                ][4.343MB/s]  [312MB/455.1MB][ 68%][==================================>               ][4.216MB/s]  [320MB/455.1MB][ 70%][===================================>              ][4.051MB/s]  [328MB/455.1MB][ 72%][====================================>             ][3.905MB/s]  [336MB/455.1MB][ 73%][====================================>             ][3.733MB/s]  [344MB/455.1MB][ 75%][=====================================>            ][3.621MB/s]  [352MB/455.1MB][ 77%][======================================>           ][3.556MB/s]  [360MB/455.1MB][ 79%][=======================================>          ][3.495MB/s]  [368MB/455.1MB][ 80%][========================================>         ][3.439MB/s]  [376MB/455.1MB][ 82%][=========================================>        ][3.387MB/s]  [384MB/455.1MB][ 84%][==========================================>       ][3.282MB/s]  [392MB/455.1MB][ 86%][===========================================>      ][3.213MB/s]  [400MB/455.1MB][ 87%][===========================================>      ][3.15MB/s]  [408MB/455.1MB][ 89%][============================================>     ][3.045MB/s]  [416MB/455.1MB][ 91%][=============================================>    ][2.993MB/s]  [424MB/455.1MB][ 93%][==============================================>   ][2.944MB/s]  [432MB/455.1MB][ 94%][===============================================>  ][2.842MB/s]  [440MB/455.1MB][ 96%][================================================> ][2.767MB/s]  [448MB/455.1MB][ 98%][=================================================>][2.715MB/s]  [455.1MB/455.1MB][100%][==================================================][2.661MB/s]  [455.1MB/455.1MB][100%][==================================================][2.661MB/s]  
In file included from input_line_8:1:
/pool/condor/dir_53034/FillHistograms_Extended_JES.C:244:70: warning: 'if' initialization statements are a C++17 extension [-Wc++17-extensions]
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                     ^
/pool/condor/dir_53034/FillHistograms_Extended_JES.C:244:71: error: expected expression
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                      ^
